--- a/css/vegas-style.css
+++ b/css/vegas-style.css
@@ -5,8 +5,9 @@ html, body {
 
 #background-image {
     width: 100%;    
-    position: relative;
+    position: absolute;
     height: 90%;   
+    border: 1px solid green;
 }
 
 .text-block {
